--- a/7.react/todo-app/package.json
+++ b/7.react/todo-app/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@iconify-json/iwwa": "^1.2.1",
+    "@iconify/tailwind4": "^1.2.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
